Wed Jan 10 19:23:36 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/rundig: Fix -a handling to move db.words.db.work_weakcmpr
	into place if it exists

Sat Jan  6 21:50:58 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Add checks for <sys/wait.h> and <wait.h> for
	ExternalParser.

	* include/htconfig.h.in: Regenerate using autoheader.

	* configure: Regenerate using configure.
	
	* htnet/Connection.cc: Add definition for FD_SET_T to fix problems
	compiling on BSDI mentioned by Joe.

	* htdig/ExternalParser.cc: Use <sys/wait.h> or <wait.h> as
	appropriate. Should fix problems with compiliation mentioned by
	Jesse on HP/UX.

	* README, htdoc/RELEASE.html: Adjust dates for the new year.

	* htdoc/upgrade.html: A few "remaining features" have been implemented.
	
Sun Dec 06 19:46:15 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htnet/HtHTTP.cc: Fixed bug for Read_Line function call in
	ReadChunkedBody method. Many thanks to Robert LaFerla. ;-)

Tue Dec 12 13:24:49 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Fixed to properly handle binary
	output from an external converter.  Fixed some compilation errors.

Tue Dec 12 12:52:14 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Handle parser command string
	as a string list again to allow arguments, build up argv and
	use execv instead of execl.

Tue Dec 12 12:25:04 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Add call to wait for child process,
	to avoid zombie buildup.

Mon Dec 11 23:57:43 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Fix up handling of fds in child
	process, more fault-tolerant handling of pipe or fork errors.

Mon Dec 11 23:30:55 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Fix up handling of creation